# api/doc/swagger.yml
@@ -174,6 +174,15 @@ paths:
      responses:
        '200':
          description: OK
+  '/projects/status':
+    get:
+      tags:
+        - projects
+      summary: "Récupération du statut de tous les projets"
+      description: "Récupération du nombre de projet par statut"
+      responses:
+        '200':
+          description: OK
   '/nodes':
     get:
       tags:
