# monitor/routes/index.js
@@ -5,20 +5,20 @@ const sessions = require('../middlewares/session');
 const hosts = require('../middlewares/host');
 const dependencies = require('../middlewares/dependencies');
 
-const global = require('../middlewares/global');
+const topBar = require('../middlewares/topBar');
 
 // dashboard page
-router.get('/', global.getGlobalInfo, projects.getProjects, (req, res) => {
+router.get('/', topBar.getInfo, projects.getProjects, (req, res) => {
   res.render('pages/index', {
     topBar: req.topBar,
     jobStatus: req.topBar.jobStatus,
     projects: req.projects,
-
+    api: req.app.get('apiUrl'),
   });
 });
 
 // jobs page with id
-router.get('/job/:id', global.getGlobalInfo, jobs.getJob, dependencies.getDependencies, (req, res) => {
+router.get('/job/:id', topBar.getInfo, jobs.getJob, dependencies.getDependencies, (req, res) => {
   const { job } = req;
   const { deps } = req;
 
@@ -32,7 +32,7 @@ router.get('/job/:id', global.getGlobalInfo, jobs.getJob, dependencies.getDepend
 });
 
 // jobs page
-router.get('/jobs', global.getGlobalInfo, jobs.getJobs, (req, res) => {
+router.get('/jobs', topBar.getInfo, jobs.getJobs, (req, res) => {
   res.render('pages/jobs', {
     topBar: req.topBar,
     jobs: req.jobs,
@@ -41,7 +41,7 @@ router.get('/jobs', global.getGlobalInfo, jobs.getJobs, (req, res) => {
 });
 
 // projects page
-router.get('/projects', global.getGlobalInfo, projects.getProjects, (req, res) => {
+router.get('/projects', topBar.getInfo, projects.getProjects, (req, res) => {
   res.render('pages/projects', {
     topBar: req.topBar,
     projects: req.projects,
@@ -50,7 +50,7 @@ router.get('/projects', global.getGlobalInfo, projects.getProjects, (req, res) =
 });
 
 // sessions page
-router.get('/sessions', global.getGlobalInfo, sessions.getSessions, (req, res) => {
+router.get('/sessions', topBar.getInfo, sessions.getSessions, (req, res) => {
   res.render('pages/sessions', {
     topBar: req.topBar,
     sessions: req.sessions,
@@ -59,7 +59,7 @@ router.get('/sessions', global.getGlobalInfo, sessions.getSessions, (req, res) =
 });
 
 // hosts page
-router.get('/hosts', global.getGlobalInfo, hosts.getHosts, (req, res) => {
+router.get('/hosts', topBar.getInfo, hosts.getHosts, (req, res) => {
   res.render('pages/hosts', {
     topBar: req.topBar,
     hosts: req.hosts,
